fix:> font flickering done

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,98 @@
-/* 여기부터 */
-/* @font-face {
+/* Thin 100 */
+@font-face {
+  font-display: block;
+  font-family: "Saira";
+  font-weight: 100;
+  font-style: normal;
+  src: url("../public/fonts/Saira-Thin.ttf") format("truetype");
+}
+/* 200 */
+/* ExtraLight 200 */
+@font-face {
+  font-display: block;
+  font-family: "Saira";
+  font-weight: 200;
+  font-style: normal;
+  src: url("../public/fonts/Saira-ExtraLight.ttf") format("truetype");
+  font-display: block;
+}
+/* 300 */
+@font-face {
+  font-display: block;
+  font-family: "Saira";
+  font-weight: 300;
+  font-style: normal;
+  src: url("../public/fonts/Saira-Light.ttf") format("truetype");
+}
+
+@font-face {
+  font-display: block;
   font-family: "Saira-Light";
-  src: ("Saira-Light"), url(./fonts/Saira-Black.otf) format("otf");
+  font-weight: 300;
+  font-style: normal;
+  src: url("../public/fonts/Saira-Light.ttf") format("truetype");
+}
+
+/* 400 */
+/* Regular 400 */
+
+@font-face {
+  font-display: block;
+  font-family: "Saira";
+  font-weight: 400;
+  font-style: normal;
+  src: url("../public/fonts/Saira-Regular.ttf") format("truetype");
+}
+
+/* 500 */
+/* Medium 500 */
+@font-face {
+  font-display: block;
+  font-family: "Saira";
+  font-weight: 500;
+  font-style: normal;
+  src: url("../public/fonts/Saira-Medium.ttf") format("truetype");
+}
+/* SemiBold 600 */
+
+@font-face {
+  font-display: block;
+  font-family: "Saira";
+  font-weight: 600;
+  font-style: normal;
+  src: url("../public/fonts/Saira-SemiBold.ttf") format("truetype");
+}
+
+/* Bold 700 */
+
+@font-face {
+  font-display: block;
+  font-family: "Saira";
+  font-weight: 700;
+  font-style: normal;
+  src: url("../public/fonts/Saira-Bold.ttf") format("truetype");
+}
+/* ExtraBold 800 */
+
+@font-face {
+  font-display: block;
+  font-family: "Saira";
+  font-weight: 800;
+  font-style: normal;
+  src: url("../public/fonts/Saira-ExtraBold.ttf") format("truetype");
+}
+
+@font-face {
+  font-display: block;
+  font-family: "Saira";
+  font-weight: 900;
+  font-style: normal;
+  src: url("../public/fonts/Saira-Black.ttf") format("truetype");
 }
 @font-face {
+  font-display: block;
   font-family: "Saira-Black";
-  src: ("Saira-Black"), url(./fonts/Saira-Light.otf) format("otf");
-} */
+  font-weight: 900;
+  font-style: normal;
+  src: url("../public/fonts/Saira-Black.ttf") format("truetype");
+}
