--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -12,6 +12,13 @@
   src: url("/fonts/Saira-Light.otf") format("truetype");
 }
 
+@font-face {
+  font-family: "Saira-Light";
+  font-weight: 300;
+  font-style: normal;
+  src: url("/fonts/Saira-Light.otf") format("truetype");
+}
+
 /* .{
   color:#0faa9d;
 } */
